# frost-template

./: .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: agent-task.yml
.github/workflows/: ci.yml  release.yml
backend/: Cargo.toml
backend/coordinator/: Cargo.toml
backend/coordinator/src/: lib.rs  main.rs
backend/coordinator/tests/: foundation.rs
backend/migrations/: 0001_create_foundation_schemas.sql  0002_create_dkg_tables.sql  0003_create_node_dkg_state.sql  0004_create_wallet_tables.sql  0005_create_signing_tables.sql
backend/tss-node/: Cargo.toml
backend/tss-node/src/: lib.rs  main.rs
backend/tss-node/tests/: foundation.rs
docs/: openapi.yaml  release-process.md  swagger-ui.html
docs/ai-native/: 00-agent-context.md  01-implementation-roadmap.md  02-agent-operating-rules.md  03-loop-engineering.md  04-automation-design.md  05-verification-harness.md  README.md
docs/ai-native/logs/: ai-collaboration-log.md  ci-versioning-agent-run-report.md  decision-log.md  phase-1-agent-run-report.md  phase-2-agent-run-report.md  phase-3-agent-run-report.md  phase-4-agent-run-report.md  phase-5-agent-run-report.md  phase-6-agent-run-report.md  phase-7-agent-run-report.md  phase-8-agent-run-report.md
docs/ai-native/prompts/: 00-bootstrap-repo.md  01-project-foundation.md  02-dkg-state-machine.md  03-frost-dkg-crypto.md  04-wallet-derivation.md  05-signing-state-machine.md  06-broadcast-confirmation.md  07-reviewer-hardening.md  08-crypto-dashboard-ux.md
docs/ai-native/templates/: agent-run-report.md  agent-task.md
docs/contracts/: crypto-dashboard-ux.md  dkg-state-machine.md  foundation.md  frost-dkg-crypto.md  reviewer-experience.md  signing-state-machine.md  wallet-derivation.md
features/: crypto-dashboard-ux.feature  dkg-flow.feature  project-foundation.feature  reviewer-experience.feature  signing-transfer.feature  wallet-derivation.feature
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/coordinator/[...path]/: route.ts
logs/: ai-collaboration-log.md  decision-log.md
scripts/: extract-release-notes.mjs  verify-phase.sh  verify-release-metadata.mjs
