[workspace]
members = ["coordinator", "tss-node"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.3"

[workspace.dependencies]
tokio = { version = "1.47.1", features = ["full"] }
axum = "0.8.8"
snafu = "0.8.7"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json"] }
solana-client = "3.1.8"
solana-sdk = "3.0.0"
solana-system-interface = { version = "2.0.0", features = ["bincode"] }
frost-ed25519 = "2.1.0"
frost-core = { version = "2.2.0", features = ["cheater-detection", "internals"] }
generic-ec = { version = "0.4.5", features = ["curve-ed25519"] }
hd-wallet = { version = "0.6.1", features = ["edwards", "curve-ed25519"] }
aes-gcm-siv = "0.11.1"
base64 = "0.22.1"
bincode = "1.3.3"
bs58 = "0.5.1"
hex = "0.4.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sha2 = "0.10.9"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.0", features = ["v4", "serde"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls", "json"] }
tower = "0.5.3"
