[package]
name = "tss-node"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
axum.workspace = true
snafu.workspace = true
sqlx.workspace = true
solana-sdk.workspace = true
frost-ed25519.workspace = true
frost-core.workspace = true
generic-ec.workspace = true
hd-wallet.workspace = true
aes-gcm-siv.workspace = true
bs58.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
dotenvy.workspace = true

[dev-dependencies]
tower.workspace = true
